2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-01  Jonathan Pryor  <jpryor@novell.com>

	* doc/doc.mdproj: Add additional XML documentation files.
	* doc/en/**: Flush.

2008-09-01  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Nullable.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add 
	  Tests/Mono.Rocks.Tests/NullableTest.cs to the tests.
	* mktuples.cs: Don't generate the Tuple.CreateNullable() methods anymore, as
	  NullableRocks.ToNullable() serves the same purpose (easily converting a
	  value type into a nullable value type).
	* doc/en/**: Flush; remove Tuple.CreateNullable(), add Nullable.xml.

2008-08-31  Jonathan Pryor  <jpryor@novell.com>

	* gendarme.ignore: Update ignored members.
	* Generator.pm: Add GetTypeParameterList(), GetValue(), GetDocActionType(),
	  GetDocFuncType(), XmlValue(), Nth(); alter GetDocFunc() and GetDocAction()
	  to generate nicer-looking cref-able strings (e.g. Action{T1,T2} instead of
	  Action{``0, ``1}).
	* Makefile: Don't warn on CS1591, and add additional dependency checks so
	  that when Generator.pm changes we rebuild all generated source.
	* mkcurry: Generate XML documentation; remove Tuple null checks.
	* mktuples.cs: Major changes: make Tuples structs instead of classes.  This
	  means that, in order to continue supporting the collection interfaces,
	  each Tuple type needs to fully implement them instead of sharing
	  implementation in a base Tuple type (as was done before).  Generate XML
	  documentation for all of these members.  The reason for this change is
	  performance and semantics; value types were deemed as more logical and
	  faster (due to less GC pressure).
	* doc/Makefile.include: Rename `update*' targets to `doc-update*'; run a
	  short sed script on doc/mono-rocks.xml before importing.
	* doc/en/**: Flush (lots of imported docs from mkcurry and mktuples, plus