@@ -8,6 +8,7 @@
 ./Tests/Mono.Rocks.Tests/LambdaTest.cs
 ./Tests/Mono.Rocks.Tests/NaturalStringComparerTest.cs
 ./Tests/Mono.Rocks.Tests/NullableTest.cs
+./Tests/Mono.Rocks.Tests/ObjectTest.cs
 ./Tests/Mono.Rocks.Tests/SequenceTest.cs
 ./Tests/Mono.Rocks.Tests/StreamConverterTest.cs
 ./Tests/Mono.Rocks.Tests/StreamTest.cs
