@@ -53,6 +53,7 @@
     <Compile Include="Mono.Rocks.Tests\LambdaTest.cs" />
     <Compile Include="Mono.Rocks.Tests\NaturalStringComparerTest.cs" />
     <Compile Include="Mono.Rocks.Tests\NullableTest.cs" />
+    <Compile Include="Mono.Rocks.Tests\ObjectTest.cs" />
     <Compile Include="Mono.Rocks.Tests\SequenceTest.cs" />
     <Compile Include="Mono.Rocks.Tests\StreamTest.cs" />
     <Compile Include="Mono.Rocks.Tests\StreamConverterTest.cs" />
